--- a/dessertbar.html
+++ b/dessertbar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blog - The Little Baker Kitchen</title>
+    <title>Dessert Bar - The Little Baker Kitchen</title>
     <script>
         (function() {
 
@@ -134,14 +134,13 @@
                 </svg>Auto</a></div>
     </div>
     <section class="py-5">
-        <div class="container py-5">
-            <div class="row mb-4 mb-lg-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h1 class="fw-bold" style="font-family: Lobster, serif;">Wowie title here</h1>
+        <div class="container py-4 py-xl-5">
+            <div class="row">
+                <div class="col-md-10 col-xl-10 text-center mx-auto">
+                    <h1 class="display-1" style="font-family: Lobster, serif;">Dessert Bar</h1>
+                    <h2 style="font-family: 'Chelsea Market', serif;">Coming soon!</h2>
                 </div>
-                <div class="col-md-10 col-lg-12 offset-md-1 offset-lg-0">
-                    <p style="text-align: justify;"><br>We’re thrilled to bring our delightful cakes, pastries, and event services to customers across Metro Manila. Whether you need a stunning cake, delicious pastries, or a fun party cart for your event, we’re here to make the process smooth and stress-free.<br><br>To help you, we’ve compiled a list of frequently asked questions (FAQs). If you have any other questions, feel free to contact us. We look forward to turning your vision into a memorable celebration!</p>
-                </div>
+                <div class="col-lg-4 offset-md-0 offset-lg-4 text-center" style="margin-top: 26px;"><a class="btn btn-primary" role="button" href="index.html">Back to home</a></div>
             </div>
         </div>
     </section>
