--- a/faq.html
+++ b/faq.html
@@ -95,7 +95,8 @@
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-No-Gutters-baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Search-Input-responsive.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-badges.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-icons.css">
     <link rel="stylesheet" href="assets/css/Stats-icons.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
 </head>
@@ -106,7 +107,14 @@
             <div class="collapse navbar-collapse text-center" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link text-center link-light" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-center link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item align-content-center">
+                        <div class="nav-item dropdown"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="specialties.html"><span style="color: rgb(255, 255, 255);">Specialties</span></a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="customorders.html">Custom Orders</a><a class="dropdown-item" href="pastries.html">Pastries</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header"><span style="color: rgb(201, 201, 201);">Events</span></h6><a class="dropdown-item" href="partycarts.html">Party Carts</a><a class="dropdown-item" href="dessertbar.html">Dessert Bar</a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="nav-item"><a class="nav-link text-center link-light active" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
                     <li class="nav-item"><a class="nav-link text-center" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
@@ -272,7 +280,7 @@
                     <ul class="list-unstyled">
                         <li><a href="customorders.html">Custom Orders</a></li>
                         <li><a href="pastries.html">Pastries</a></li>
-                        <li><a href="events.html">Party Carts &amp; Events</a></li>
+                        <li><a href="partycarts.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
