--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery-No-Gutters-baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Search-Input-responsive.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-badges.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-icons.css">
     <link rel="stylesheet" href="assets/css/Stats-icons.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
 </head>
@@ -106,7 +107,14 @@
             <div class="collapse navbar-collapse text-center" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link text-center link-light active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-center link-light pricing-nav" href="specialties.html">Specialties</a></li>
+                    <li class="nav-item align-content-center">
+                        <div class="nav-item dropdown"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="specialties.html"><span style="color: rgb(255, 255, 255);">Specialties</span></a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="customorders.html">Custom Orders</a><a class="dropdown-item" href="pastries.html">Pastries</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header"><span style="color: rgb(201, 201, 201);">Events</span></h6><a class="dropdown-item" href="partycarts.html">Party Carts</a><a class="dropdown-item" href="dessertbar.html">Dessert Bar</a>
+                            </div>
+                        </div>
+                    </li>
                     <li class="nav-item"><a class="nav-link text-center link-light" href="faq.html"><span style="font-weight: normal !important;">FAQ</span></a></li>
                     <li class="nav-item"><a class="nav-link text-center" href="blogs.html"><span style="color: rgb(255, 255, 255);">Blogs</span></a></li>
                 </ul><a class="btn btn-secondary link-light shadow" role="button" href="contactus.html">Contact Us</a>
@@ -161,7 +169,7 @@
                         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-5 offset-sm-2 offset-md-6 offset-lg-6" style="border-radius: 20px;padding: 20px 30px;background: rgba(221,162,146,0.8);">
                             <div class="text-center text-md-start text-lg-start text-xl-start text-xxl-start" style="max-width: 370px;">
                                 <h1 class="fw-bold" style="font-family: Lobster, serif;"><span style="color: rgb(0, 0, 0);">Perfect for Any Occasion</span></h1>
-                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(0, 0, 0);">We're excited to help make your celebration extra special.</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="events.html">View Party Carts</a>
+                                <p class="my-3" style="color: var(--bs-primary-text-emphasis);"><strong><span style="color: rgb(0, 0, 0);">We're excited to help make your celebration extra special.</span></strong></p><a class="btn btn-primary btn-lg me-2" role="button" href="partycarts.html">View Party Carts</a>
                             </div>
                         </div>
                     </div>
@@ -233,7 +241,7 @@
                         <div><a class="carousel-control-prev" href="#carousel-4" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-4" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
                         <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-4" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-4" data-bs-slide-to="3"></button></div>
                     </div>
-                    <div class="text-center py-4"><a class="btn btn-outline-secondary btn-lg" role="button" href="events.html">Party Carts &amp; Events</a></div>
+                    <div class="text-center py-4"><a class="btn btn-outline-secondary btn-lg" role="button" href="partycarts.html">Party Carts &amp; Events</a></div>
                 </div>
             </div>
         </div>
@@ -562,7 +570,7 @@
                     <ul class="list-unstyled">
                         <li><a href="customorders.html">Custom Orders</a></li>
                         <li><a href="pastries.html">Pastries</a></li>
-                        <li><a href="events.html">Party Carts &amp; Events</a></li>
+                        <li><a href="partycarts.html">Party Carts &amp; Events</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
