--- a/partycarts.html
+++ b/partycarts.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 <link rel="icon" type="image/x-icon" href="./assets/brands/Transparent Logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Blog - The Little Baker Kitchen</title>
+    <title>Party Carts - The Little Baker Kitchen</title>
     <script>
         (function() {
 
@@ -134,13 +134,115 @@
                 </svg>Auto</a></div>
     </div>
     <section class="py-5">
-        <div class="container py-5">
-            <div class="row mb-4 mb-lg-5">
-                <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h1 class="fw-bold" style="font-family: Lobster, serif;">Wowie title here</h1>
+        <div class="container py-4 py-xl-5">
+            <div class="row">
+                <div class="col-12 col-sm-9 col-md-9 col-lg-7 col-xl-6 offset-lg-2 align-self-center">
+                    <h1 style="font-family: 'Chelsea Market', serif;text-align: right;margin-bottom: 0px;">The Little Baker Kitchen</h1>
                 </div>
-                <div class="col-md-10 col-lg-12 offset-md-1 offset-lg-0">
-                    <p style="text-align: justify;"><br>We’re thrilled to bring our delightful cakes, pastries, and event services to customers across Metro Manila. Whether you need a stunning cake, delicious pastries, or a fun party cart for your event, we’re here to make the process smooth and stress-free.<br><br>To help you, we’ve compiled a list of frequently asked questions (FAQs). If you have any other questions, feel free to contact us. We look forward to turning your vision into a memorable celebration!</p>
+                <div class="col-sm-3 col-md-1 col-xl-2 text-center align-self-center"><img src="assets/img/brands/Hatblack.png" style="height: 50px;"></div>
+                <div class="col-md-10 col-xl-10 offset-md-0 text-center mx-auto">
+                    <hr style="border-radius: 5px;border: 3px solid rgb(0,0,0);">
+                    <h1 style="font-family: Inter, sans-serif;">Premium Party Packages</h1>
+                    <p class="w-lg-50" style="margin-top: 19px;">Make your events unforgettable with TLB Kitchen's Party Cart Services! We bring an assortment of delightful treats, from pastries and sweets to custom desserts, right to your celebration. Perfect for weddings, birthdays, and special gatherings, our carts add a touch of charm and sweetness to any occasion. Want something unique? Customize your own cart with your favorite treats!. Explore our options and let us help make your event extra special!</p>
+                </div>
+                <div class="col-lg-4 offset-lg-4 text-center">
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/products/Party_Cart_1.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_2.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_3.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_4.jpg" alt="Slide Image"></div>
+                        </div>
+                        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button></div>
+                    </div>
+                </div>
+                <div class="col-lg-12 offset-lg-0">
+                    <section class="py-4 py-xl-5">
+                        <div class="container h-100">
+                            <div class="text-white bg-primary border rounded border-0 p-4 py-5">
+                                <div class="row h-100">
+                                    <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                                        <div>
+                                            <h1 class="display-5 fw-bold text-white mb-3" style="font-family: Lobster, serif;">Inclusions</h1>
+                                            <p class="fs-5 mb-4">4 Hours Duration, Full Cart Setup, 2 Servers, Free Delivery Within Quezon City (Excluding Novaliches &amp; Payatas)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <div class="row gy-4 gy-xl-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-xl-flex align-items-xl-center gutter-y" style="padding-top: 0px;margin-top: 30px;">
+                        <div class="col-lg-4 offset-lg-0">
+                            <div class="card">
+                                <div class="card-body text-center p-4">
+                                    <h6 class="text-uppercase text-muted card-subtitle">Package 1</h6>
+                                    <h4 class="display-4 fw-bold card-title">₱8,000</h4>
+                                </div>
+                                <div class="card-footer p-4">
+                                    <div>
+                                        <ul class="list-unstyled">
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>50 Cookie A La Mode<br><sub>(Classic Choco Chip Cookie topped w/ Ice Cream)</sub></span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Vanilla, Chocolate, Strawberry, Mocha, Ube, Cheese, Mango, Pistachio, Cookies &amp; Cream)</sub></span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>Toppings Included<br><sub>(Marshmallows, Cereals, Rainbow Sprinkles, Sliced Almonds, Chocolate Syrup, Caramel Syrup)</sub></span></li>
+                                        </ul>
+                                    </div><a class="btn btn-primary d-block w-100" role="button" href="contactus.html">Contact Us!</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="card border-primary border-2">
+                                <div class="card-body text-center p-4"><span class="badge rounded-pill bg-primary position-absolute top-0 start-50 translate-middle text-uppercase">Most Popular</span>
+                                    <h6 class="text-uppercase text-muted card-subtitle">Package 2</h6>
+                                    <h4 class="display-4 fw-bold card-title">₱8,500</h4>
+                                </div>
+                                <div class="card-footer p-4">
+                                    <div>
+                                        <ul class="list-unstyled">
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>100 Cups Nori Chips</span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Original, Barbeque, Cheese, Sourcream, White Cheddar, Chili BBQ, Sweet Corn)</sub></span></li>
+                                        </ul>
+                                    </div><a class="btn btn-primary d-block w-100" role="button" href="contactus.html">Contact Us!</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 offset-md-3 offset-lg-0">
+                            <div class="card">
+                                <div class="card-body text-center p-4">
+                                    <h6 class="text-uppercase text-muted card-subtitle">Package 3</h6>
+                                    <h4 class="display-4 fw-bold card-title">₱10,500</h4>
+                                </div>
+                                <div class="card-footer p-4">
+                                    <div>
+                                        <ul class="list-unstyled">
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>50 Cookie A La Mode<br><sub>(Classic Choco Chip Cookie topped w/ Ice Cream)</sub></span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Vanilla, Chocolate, Strawberry, Mocha, Ube, Cheese, Mango, Pistachio, Cookies &amp; Cream)</sub></span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>50 Cups Nori Chips</span></li>
+                                            <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
+                                                        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
+                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Original, Barbeque, Cheese, Sourcream, White Cheddar, Chili BBQ, Sweet Corn)</sub></span></li>
+                                        </ul>
+                                    </div><a class="btn btn-primary d-block w-100" role="button" href="contactus.html">Contact Us!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
