Base website layout (No functionality)

--- a/blogs.html
+++ b/blogs.html
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="block-heading" style="margin-top: 27px;">
                 <h1 class="display-4 text-center" style="font-family: Lobster, serif;">Blogs</h1>
-                <p style="text-align: justify;">Welcome to the sweetest corner of the internet, where we’re all about indulging in the latest and greatest cake trends. At CakeIndulge Manila, we’re passionate about exploring the exciting world of baking and decorating, and we’re thrilled to share our expertise with you.<br><br>Our team of cake enthusiasts is dedicated to bringing you the most mouth-watering recipes, innovative decorating techniques, and must-know tips for baking success. Whether you’re a frosting fanatic or a sponge cake specialist, you’ve come to the right place. Join us on a journey through the world of sweet treats and let’s satisfy our cake cravings together!</p>
+                <p style="text-align: justify;">Welcome to our blog! Discover baking tips, recipes, and stories from our kitchen. Get insights into our creative process and stay updated on our latest treats and events. Join Chef Brent and the team on our delicious journey!</p>
             </div>
             <div class="row" style="margin-bottom: 23px;">
                 <div class="col-lg-10 offset-lg-1">
