--- a/partycarts.html
+++ b/partycarts.html
@@ -197,8 +197,8 @@
                             </div>
                         </div>
                         <div class="col-lg-4">
-                            <div class="card border-primary border-2">
-                                <div class="card-body text-center p-4"><span class="badge rounded-pill bg-primary position-absolute top-0 start-50 translate-middle text-uppercase">Most Popular</span>
+                            <div class="card">
+                                <div class="card-body text-center p-4">
                                     <h6 class="text-uppercase text-muted card-subtitle">Package 2</h6>
                                     <h4 class="display-4 fw-bold card-title">₱8,500</h4>
                                 </div>
@@ -217,8 +217,8 @@
                             </div>
                         </div>
                         <div class="col-lg-4 offset-md-3 offset-lg-0">
-                            <div class="card">
-                                <div class="card-body text-center p-4">
+                            <div class="card border-primary border-2">
+                                <div class="card-body text-center p-4"><span class="badge rounded-pill bg-primary position-absolute top-0 start-50 translate-middle text-uppercase">Most Popular</span>
                                     <h6 class="text-uppercase text-muted card-subtitle">Package 3</h6>
                                     <h4 class="display-4 fw-bold card-title">₱10,500</h4>
                                 </div>
@@ -247,6 +247,42 @@
             </div>
         </div>
     </section>
+    <div class="container py-4 py-xl-5">
+        <div class="row mb-4 mb-lg-5">
+            <div class="col-md-10 col-lg-10 col-xl-10 text-center mx-auto">
+                <h1 style="font-family: Lobster, serif;">Customize your own cart!</h1>
+                <p class="fs-5 w-lg-50">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><span>Cookie A La Mode</span></li>
+                    <li class="list-group-item"><span>Custom Character Marshmallows (For Cookie A La Mode Topping)</span></li>
+                    <li class="list-group-item"><span>Nori Chips Cups</span></li>
+                    <li class="list-group-item"><span>Bite-Sized Gourmet Cookies</span></li>
+                    <li class="list-group-item"><span>French Macarons (Plain or Character Design)</span></li>
+                    <li class="list-group-item"><span>Cream Puffs (Vanilla / Ube)</span></li>
+                    <li class="list-group-item"><span>Brownies / Cheesecake Brownie Bites</span></li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><span>Coconut Macaroons</span></li>
+                    <li class="list-group-item"><span>Cheese Custaroons</span></li>
+                    <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
+                    <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
+                    <li class="list-group-item"><span>Buko Pandan Cups</span></li>
+                    <li class="list-group-item"><span>And Many More!</span></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p class="fs-5 text-center w-lg-50" style="margin-top: 31px;">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
+            </div>
+        </div>
+    </div>
     <footer class="bg-primary-gradient">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
