--- a/customorders.html
+++ b/customorders.html
@@ -154,7 +154,7 @@
             </div>
             <div class="row" style="margin-bottom: 23px;">
                 <div class="col-lg-10 offset-lg-1">
-                    <div class="input-group input-group-sm"><span class="input-group-text">Find Products</span><input class="form-control" type="text" placeholder="Start typing here..."><button class="btn btn-primary" type="button">Search</button></div>
+                    <div class="input-group input-group-sm"><span class="input-group-text">Find Designs</span><input class="form-control" type="text" placeholder="Start typing here..."><button class="btn btn-primary" type="button">Search</button></div>
                 </div>
             </div>
             <div class="row">
