--- a/testimonials.html
+++ b/testimonials.html
@@ -548,7 +548,7 @@
                                     <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
                                         <div class="text-center">
                                             <h1 class="fw-bold" style="font-family:Lobster, serif;"><span style="color: rgb(0, 0, 0);">Jillian</span></h1>
-                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0);">“Sobrang cute nakakahiyang kainin!!”</span></p><button class="btn btn-primary me-2" data-bs-target="#pictureModal13" data-bs-toggle="modal" type="button">View Order</button>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0);">“Sobrang cute&nbsp;</span>nakakahinayang&nbsp;<span style="color: rgb(0, 0, 0);">kainin!!”</span></p><button class="btn btn-primary me-2" data-bs-target="#pictureModal13" data-bs-toggle="modal" type="button">View Order</button>
                                         </div>
                                     </div>
                                 </div>
@@ -632,7 +632,7 @@
                                     <div class="col-12 col-sm-10 col-md-10 col-lg-8 col-xl-8 offset-sm-1 offset-md-1 offset-lg-2 offset-xl-2" style="border-radius:20px;padding:20px 30px;background:rgba(221,162,146,0.84);">
                                         <div class="text-center">
                                             <h1 class="fw-bold" style="font-family:Lobster, serif;"><span style="color: rgb(0, 0, 0);">Joliza</span></h1>
-                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0);">“Look how we love your cookies, it made it to Gensan!”</span></p><button class="btn btn-primary me-2" data-bs-target="#pictureModal20" data-bs-toggle="modal" type="button">View Order</button>
+                                            <p class="my-3" style="color:var(--bs-primary-text-emphasis);"><span style="color: rgb(0, 0, 0);">“Look how we love your cookies, they made it to Gensan!”</span></p><button class="btn btn-primary me-2" data-bs-target="#pictureModal20" data-bs-toggle="modal" type="button">View Order</button>
                                         </div>
                                     </div>
                                 </div>
