--- a/aboutus.html
+++ b/aboutus.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </nav>
-    <div class="theme-switcher dropup fixed-bottom" style="margin-bottom: 30px;text-align: right;"><button class="btn btn-link" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="color: var(--bs-body-color);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-sun-fill mb-1">
+    <div class="theme-switcher dropup fixed-bottom" style="margin-bottom: 50px;text-align: right;"><button class="btn btn-link" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="color: var(--bs-body-color);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-sun-fill mb-1">
                 <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
             </svg></button>
         <div class="dropdown-menu"><a class="dropdown-item d-flex align-items-center" href="#" data-bs-theme-value="light"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-sun-fill opacity-50 me-2">
@@ -142,24 +142,24 @@
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col-sm-10 col-lg-6 col-xl-5 offset-sm-1 offset-md-0 offset-lg-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/team/1stPicAboutme.jpg" style="height: 300px;"></div>
-                <div class="col-xl-7 d-md-flex align-items-md-end align-items-lg-center mb-5">
+                <div class="col-xl-7 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
                     <div>
-                        <h5 class="fw-bold">Hi! I’m Chef Brent, head decorator, and owner of The Little Baker Kitchen.<br><br><span style="font-weight: normal !important;">I discovered my love for baking at the age of 10 and started selling my pastries when I was 12, which marked the humble beginning of “The Little Baker Kitchen”.</span></h5>
+                        <h5 class="fw-bold"><span style="font-weight: normal !important;">Hi! I’m Chef Brent, head decorator, and owner of The Little Baker Kitchen.</span><br><span style="font-weight: normal !important;">I discovered my love for baking at the age of 10 and started selling my pastries when I was 12, which marked the humble beginning of “The Little Baker Kitchen”.</span></h5>
                     </div>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col-md-7 col-lg-6 col-xl-5 offset-lg-0 offset-xl-1 text-center order-md-last mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus2.jpg" style="height: 300px;"></div>
                 <div class="col-md-5 col-lg-6 col-xl-6 offset-lg-0 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
-                    <h5 class="fw-bold">Since then, I’ve passionately pursued my baking journey, perfecting recipes and creating delightful treats that bring joy to others.</h5>
+                    <h5 class="fw-bold"><span style="font-weight: normal !important;">Since then, I’ve passionately pursued my baking journey, perfecting recipes and creating delightful treats that bring joy to others.</span></h5>
                     <div></div>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
                 <div class="col-sm-12 col-md-4 col-lg-4 col-xl-5 offset-lg-1 offset-xl-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/products/aboutus3.png" width="276" height="402"></div>
-                <div class="col-md-8 col-lg-6 col-xl-7 offset-lg-1 offset-xl-0 d-md-flex align-items-md-end align-items-lg-center mb-5">
+                <div class="col-md-8 col-lg-6 col-xl-7 offset-lg-1 offset-xl-0 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
                     <div>
-                        <h5 class="fw-bold">I recently had the honor of representing the Philippines when I turned 19, at the Juniores World Pastry Cup 2024 held in Italy, where chefs under 23 from around the world showcased their artistic creations. <br><br>Team Philippines secured 5th place, and it was an incredible experience to be part of such a prestigious competition.</h5>
+                        <h5 class="fw-bold"><span style="font-weight: normal !important;">I recently had the honor of representing the Philippines when I turned 19, at the Juniores World Pastry Cup 2024 held in Italy, where chefs under 23 from around the world showcased their artistic creations. </span><br><span style="font-weight: normal !important;">Team Philippines secured 5th place, and it was an incredible experience to be part of such a prestigious competition.</span></h5>
                     </div>
                 </div>
             </div>
