--- a/partycarts.html
+++ b/partycarts.html
@@ -136,14 +136,13 @@
     <section class="py-5">
         <div class="container py-4 py-xl-5">
             <div class="row">
-                <div class="col-12 col-sm-9 col-md-9 col-lg-7 col-xl-6 offset-lg-2 align-self-center">
-                    <h1 style="font-family: 'Chelsea Market', serif;text-align: right;margin-bottom: 0px;">The Little Baker Kitchen</h1>
+                <div class="col-lg-12 text-center" style="font-family: Lobster, serif;">
+                    <h1 class="display-4" style="font-family: 'Chelsea Market', serif;">The Little Baker Kitchen</h1>
                 </div>
-                <div class="col-sm-3 col-md-1 col-xl-2 text-center align-self-center"><img src="assets/img/brands/Hatblack.png" style="height: 50px;"></div>
                 <div class="col-md-10 col-xl-10 offset-md-0 text-center mx-auto">
                     <hr style="border-radius: 5px;border: 3px solid rgb(0,0,0);">
                     <h1 style="font-family: Inter, sans-serif;">Premium Party Packages</h1>
-                    <p class="w-lg-50" style="margin-top: 19px;">Make your events unforgettable with TLB Kitchen's Party Cart Services! We bring an assortment of delightful treats, from pastries and sweets to custom desserts, right to your celebration. Perfect for weddings, birthdays, and special gatherings, our carts add a touch of charm and sweetness to any occasion. Want something unique? Customize your own cart with your favorite treats!. Explore our options and let us help make your event extra special!</p>
+                    <p class="w-lg-50" style="margin-top: 19px;">Make your events unforgettable with TLB Kitchen's Party Cart Services! We bring an assortment of delightful treats, from pastries and sweets to custom desserts, right to your celebration. Perfect for weddings, birthdays, and special gatherings, our carts add a touch of charm and sweetness to any occasion. <br><br>Want something unique? Customize your own cart with your favorite treats!. <br><br>Explore our options and let us help make your event extra special!</p>
                 </div>
                 <div class="col-lg-4 offset-lg-4 text-center">
                     <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
@@ -152,9 +151,13 @@
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_2.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_3.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_4.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart5.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart6.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart7.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart8.jpg" alt="Slide Image"></div>
                         </div>
                         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
-                        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button></div>
+                        <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="2"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="3"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="4"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="5"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="6"></button> <button type="button" data-bs-target="#carousel-1" data-bs-slide-to="7"></button></div>
                     </div>
                 </div>
                 <div class="col-lg-12 offset-lg-0">
@@ -190,7 +193,7 @@
                                                     </svg></span><span>Choose 3 Flavors<br><sub>(Vanilla, Chocolate, Strawberry, Mocha, Ube, Cheese, Mango, Pistachio, Cookies &amp; Cream)</sub></span></li>
                                             <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                                         <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
-                                                    </svg></span><span>Toppings Included<br><sub>(Marshmallows, Cereals, Rainbow Sprinkles, Sliced Almonds, Chocolate Syrup, Caramel Syrup)</sub></span></li>
+                                                    </svg></span><span>Toppings Included<br><sub>(Marshmallows, Cereals, Rainbow Sprinkles, Sliced Almonds, Chocolate Syrup, Caramel Syrup)</sub><br><br></span></li>
                                         </ul>
                                     </div><a class="btn btn-primary d-block w-100" role="button" href="contactus.html">Contact Us!</a>
                                 </div>
@@ -210,7 +213,7 @@
                                                     </svg></span><span>100 Cups Nori Chips</span></li>
                                             <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                                         <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022"></path>
-                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Original, Barbeque, Cheese, Sourcream, White Cheddar, Chili BBQ, Sweet Corn)</sub></span></li>
+                                                    </svg></span><span>Choose 3 Flavors<br><sub>(Original, Barbeque, Cheese, Sourcream, White Cheddar, Chili BBQ, Sweet Corn)</sub><br><br><br><br><br><br><br><br><br></span></li>
                                         </ul>
                                     </div><a class="btn btn-primary d-block w-100" role="button" href="contactus.html">Contact Us!</a>
                                 </div>
@@ -243,46 +246,51 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row mb-4 mb-lg-5">
+                        <div class="col">
+                            <section class="py-4 py-xl-5">
+                                <div class="container h-100">
+                                    <div class="text-white border rounded border-0 p-4 py-5" style="background-color: #282048;">
+                                        <div class="row h-100">
+                                            <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
+                                                <div>
+                                                    <h1 class="text-uppercase fw-bold text-white mb-3">Customize your own cart!</h1>
+                                                    <p class="mb-4">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <ul class="list-group">
+                                <li class="list-group-item"><span>Cookie A La Mode</span></li>
+                                <li class="list-group-item"><span>Custom Character Marshmallows (For Cookie A La Mode Topping)</span></li>
+                                <li class="list-group-item"><span>Nori Chips Cups</span></li>
+                                <li class="list-group-item"><span>Bite-Sized Gourmet Cookies</span></li>
+                                <li class="list-group-item"><span>French Macarons (Plain or Character Design)</span></li>
+                                <li class="list-group-item"><span>Cream Puffs (Vanilla / Ube)</span></li>
+                                <li class="list-group-item"><span>Brownies / Cheesecake Brownie Bites</span></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-group">
+                                <li class="list-group-item"><span>Coconut Macaroons</span></li>
+                                <li class="list-group-item"><span>Cheese Custaroons</span></li>
+                                <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
+                                <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
+                                <li class="list-group-item"><span>Buko Pandan Cups</span></li>
+                                <li class="list-group-item"><span>And Many More!</span></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <div class="container py-4 py-xl-5">
-        <div class="row mb-4 mb-lg-5">
-            <div class="col-md-10 col-lg-10 col-xl-10 text-center mx-auto">
-                <h1 style="font-family: Lobster, serif;">Customize your own cart!</h1>
-                <p class="fs-5 w-lg-50">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-                <ul class="list-group">
-                    <li class="list-group-item"><span>Cookie A La Mode</span></li>
-                    <li class="list-group-item"><span>Custom Character Marshmallows (For Cookie A La Mode Topping)</span></li>
-                    <li class="list-group-item"><span>Nori Chips Cups</span></li>
-                    <li class="list-group-item"><span>Bite-Sized Gourmet Cookies</span></li>
-                    <li class="list-group-item"><span>French Macarons (Plain or Character Design)</span></li>
-                    <li class="list-group-item"><span>Cream Puffs (Vanilla / Ube)</span></li>
-                    <li class="list-group-item"><span>Brownies / Cheesecake Brownie Bites</span></li>
-                </ul>
-            </div>
-            <div class="col-lg-6">
-                <ul class="list-group">
-                    <li class="list-group-item"><span>Coconut Macaroons</span></li>
-                    <li class="list-group-item"><span>Cheese Custaroons</span></li>
-                    <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
-                    <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
-                    <li class="list-group-item"><span>Buko Pandan Cups</span></li>
-                    <li class="list-group-item"><span>And Many More!</span></li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p class="fs-5 text-center w-lg-50" style="margin-top: 31px;">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
-            </div>
-        </div>
-    </div>
     <footer class="bg-primary-gradient">
         <div class="container py-4 py-lg-5">
             <div class="row justify-content-center">
