--- a/aboutus.html
+++ b/aboutus.html
@@ -144,7 +144,7 @@
                 <div class="col-sm-10 col-lg-6 col-xl-5 offset-sm-1 offset-md-0 offset-lg-0 text-center mb-5"><img class="rounded img-fluid shadow" src="assets/img/team/1stPicAboutme.jpg" style="height: 300px;"></div>
                 <div class="col-xl-7 d-md-flex align-self-center align-items-md-end align-items-lg-center mb-5">
                     <div>
-                        <h5 class="fw-bold"><span style="font-weight: normal !important;">Hi! I’m Chef Brent, head decorator, and owner of The Little Baker Kitchen.</span><br><span style="font-weight: normal !important;">I discovered my love for baking at the age of 10 and started selling my pastries when I was 12, which marked the humble beginning of “The Little Baker Kitchen”.</span></h5>
+                        <h5 class="fw-bold">Hi! I’m Chef Brent, head decorator, and owner of The Little Baker Kitchen.<br><br><span style="font-weight: normal !important;">I discovered my love for baking at the age of 10 and started selling my pastries when I was 12, which marked the humble beginning of “The Little Baker Kitchen”.</span></h5>
                     </div>
                 </div>
             </div>
