--- a/partycarts.html
+++ b/partycarts.html
@@ -148,9 +148,9 @@
                     <div class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false" id="carousel-1">
                         <div class="carousel-inner">
                             <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/products/Party_Cart_1.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_2.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_3.jpg" alt="Slide Image"></div>
-                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/Party_Cart_4.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart2.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart3.jpg" alt="Slide Image"></div>
+                            <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart4.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart5.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart6.jpg" alt="Slide Image"></div>
                             <div class="carousel-item"><img class="w-100 d-block" src="assets/img/products/cart7.jpg" alt="Slide Image"></div>
@@ -250,41 +250,41 @@
                         <div class="col">
                             <section class="py-4 py-xl-5">
                                 <div class="container h-100">
-                                    <div class="text-white border rounded border-0 p-4 py-5" style="background-color: #282048;">
+                                    <div class="text-white border rounded border-0 p-4 py-5" style="background-color: #d5f3fd;">
                                         <div class="row h-100">
                                             <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                                                 <div>
-                                                    <h1 class="text-uppercase fw-bold text-white mb-3">Customize your own cart!</h1>
-                                                    <p class="mb-4">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</p>
+                                                    <h1 class="text-uppercase fw-bold text-white mb-3"><span style="color: rgb(0, 0, 0);">Customize your own cart!</span></h1>
+                                                    <p class="mb-4"><span style="color: rgb(0, 0, 0);">Looking for more variety or something unique? Customize your party cart! Start with a package and add extra treats, or create your cart from scratch. Whether you want to add 20 more cups of Nori Chips or mix and match your favorite treats, our delicious offerings are here to make your cart uniquely yours!</span></p>
                                                 </div>
+                                            </div>
+                                        </div>
+                                        <div class="row align-items-center">
+                                            <div class="col-lg-6">
+                                                <ul class="list-group">
+                                                    <li class="list-group-item"><span>Cookie A La Mode</span></li>
+                                                    <li class="list-group-item"><span>Custom Character Marshmallows (For Cookie A La Mode Topping)</span></li>
+                                                    <li class="list-group-item"><span>Nori Chips Cups</span></li>
+                                                    <li class="list-group-item"><span>Bite-Sized Gourmet Cookies</span></li>
+                                                    <li class="list-group-item"><span>French Macarons (Plain or Character Design)</span></li>
+                                                    <li class="list-group-item"><span>Cream Puffs (Vanilla / Ube)</span></li>
+                                                    <li class="list-group-item"><span>Brownies / Cheesecake Brownie Bites</span></li>
+                                                </ul>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <ul class="list-group">
+                                                    <li class="list-group-item"><span>Coconut Macaroons</span></li>
+                                                    <li class="list-group-item"><span>Cheese Custaroons</span></li>
+                                                    <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
+                                                    <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
+                                                    <li class="list-group-item"><span>Buko Pandan Cups</span></li>
+                                                    <li class="list-group-item"><span>And Many More!</span></li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </section>
-                        </div>
-                    </div>
-                    <div class="row align-items-center">
-                        <div class="col-lg-6">
-                            <ul class="list-group">
-                                <li class="list-group-item"><span>Cookie A La Mode</span></li>
-                                <li class="list-group-item"><span>Custom Character Marshmallows (For Cookie A La Mode Topping)</span></li>
-                                <li class="list-group-item"><span>Nori Chips Cups</span></li>
-                                <li class="list-group-item"><span>Bite-Sized Gourmet Cookies</span></li>
-                                <li class="list-group-item"><span>French Macarons (Plain or Character Design)</span></li>
-                                <li class="list-group-item"><span>Cream Puffs (Vanilla / Ube)</span></li>
-                                <li class="list-group-item"><span>Brownies / Cheesecake Brownie Bites</span></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-6">
-                            <ul class="list-group">
-                                <li class="list-group-item"><span>Coconut Macaroons</span></li>
-                                <li class="list-group-item"><span>Cheese Custaroons</span></li>
-                                <li class="list-group-item"><span>Puto w/ Cheese (Original / Ube)</span></li>
-                                <li class="list-group-item"><span>Kutsinta w/ Grated Coconut</span></li>
-                                <li class="list-group-item"><span>Buko Pandan Cups</span></li>
-                                <li class="list-group-item"><span>And Many More!</span></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
